# VramCram

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
scripts/: README.md  demo_api.py  simple_workflow_test.py  test_llm_to_image.py
tests/: __init__.py
tests/integration/: __init__.py  test_end_to_end.py  test_security_integration.py
tests/unit/: __init__.py  test_api_gateway.py  test_base_agent.py  test_config.py  test_events.py  test_job.py  test_redis_client.py  test_registry.py  test_resource_limits.py  test_result_format.py  test_security_validation.py  test_vram_tracker.py
vramcram/: __init__.py  main.py
vramcram/agents/: __init__.py  base.py  coordinator.py  model_manager.py
vramcram/agents/worker/: __init__.py  base.py  diffusion_worker.py  llm_worker.py
vramcram/api/: __init__.py  gateway.py  models.py  params.py
vramcram/cli/: __init__.py  main.py
vramcram/config/: __init__.py  loader.py  models.py
vramcram/events/: __init__.py  bus.py  schema.py  types.py
vramcram/gpu/: __init__.py  vram_tracker.py
vramcram/queue/: __init__.py  job.py  registry.py
vramcram/redis/: __init__.py  client.py
vramcram/security/: __init__.py  resource_limits.py  validation.py
